# med_website

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
config/: settings.py  urls.py
fixture/: blog.json  main.json  users.json
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_initial.py
main/templates/main/: about.html  appointments.html  appointments_archive.html  base.html  doctors.html  index.html  speciality.html  user_appointments.html
main/tests/: test_models.py  test_views.py
static/css/: blog.css
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_managers.py  0004_alter_user_managers.py
users/templates/users/: login.html  profile.html  regenerate_password.html  registration_confirmed.html
users/templatetags/: mediapath.py
users/tests/: test_forms.py  test_manager.py
